# ssk_products_flask

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  add_type_annotations.py  alembic.ini  app.py  config.py  create_migration.sh  docker-compose.yml  factory.py  fix_all_imports.py  fix_category_event.py  fix_imports.py  fix_none_comparisons.py  mongo_client.py  mypy.ini  new_swagger.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_code_quality.sh  run_migrations.sh  run_tests.sh  setup_tests.sh  swagger.py  swagger_requirements.txt  test_config.py  update_imports.py  validators.py
.github/: CI_CD_TESTS.md
.github/workflows/: code-analysis.yml  dev.yml
application/commands/: create_product_command.py  delete_product_command.py  update_product_command.py
application/events/: event_publisher.py
application/queries/: get_all_product_query.py  get_product_by_id_query.py
application/services/: product_service.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
domain/entities/: product_entitie.py
domain/entity/: product_entity.py
domain/repositories/: delete_product_repository_abstract.py  get_all_product_repository_abstract.py  product_event_store_repository_abstract.py  (+1 more)
ioc/: container.py
migrations/: env.py
presentation/: category_routes.py  product_routes.py  routes.py
src/: __init__.py
src/errors/: handlers.py
terraform/: cloudwatch.tf  locals.tf  main.tf  plan.out  provider_aws.tf  s3.tf  sqs.tf  terraform.tfvars  variables.tf
tests/: README.md  conftest.py
utils/: upload_to_s3.py
(+206 files in other folders)
