[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long - tratamos manualmente os mais críticos
    "T201",  # print - substituímos por loggers nos casos mais críticos
    "F841",  # variáveis não utilizadas que podem ser necessárias no futuro
    "E711",  # comparações com None - alguns podem persistir
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "htmlcov",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["src"]
